force-app/main/default/objects/Temp_Data_Holder__c/Temp_Data_Holder__c.object-meta.xml
<CustomObject>
    <description>Temporary Object to be used by Salesforce Practice to create 6000 Case records using Apex Callouts based on request received from business</description>
    <label>Temp Data Holder</label>
    <nameField>
        <displayFormat>MOREQ-{0000}</displayFormat>
        <label>Temp Data Holder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Data Holder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>