force-app/main/default/objects/Temp_Data_Holder__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>