force-app/main/default/objects/Temp_Data_Holder__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>Body of incoming email</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>