force-app/main/default/objects/Temp_Data_Holder__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>Subject of incoming email</description>
    <inlineHelpText>Subject of incoming email</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>